--- a/views/index.pug
+++ b/views/index.pug
@@ -41,10 +41,84 @@ block content
           .pc
             img(src="assets/images/pc.png")
           .questions
-            h3 Aj ty stihneš skočiť na obed a späť,<br> kým sa tvoj web načíta?
-            h3 Máš už plné zuby wordpressu a <br>podobných zastaraných systémov?
-            h3 Tvoji zákazníci sú nervózni zo <br>slimačieho tempa tvojho webu?
-            h3.highlight Získaj web s rýchlosťou svetla a<br>#[strong zvýš tempo svojho biznisu!]
+            .question
+              .mark
+              h3 Aj ty stihneš skočiť na obed a späť,<br> kým sa tvoj web načíta?
+            .question
+              .mark
+              h3 Máš už plné zuby wordpressu a <br>podobných zastaraných systémov?
+            .question
+              .mark
+              h3 Tvoji zákazníci sú nervózni zo <br>slimačieho tempa tvojho webu?
+            .question
+              .done
+              h3.highlight Získaj web s rýchlosťou svetla a<br>#[strong zvýš tempo svojho biznisu!]
+      section.third#section-3
+        .thirdContent
+          .phone2
+            img(src="assets/images/phone2.png")
+          .benefits
+            .benefit
+              .mark
+              h3 Získaš spoľahlivý web s rýchlosťou načítania do 1 sekundy
+            .benefit
+              .mark
+              h3 Preukázateľne sa ti zvýšia predaje aj o 50%
+            .benefit
+              .mark
+              h3 Stúpne počet návštevníkov na tvojom eshope
+            .benefit
+              .mark
+              h3 Znížiš mieru okamžitých obchodov z tvojho webu aspoň o 10%
+            .benefit
+              .mark
+              h3 Zákazníci na tvojej stránke strávia dlhší čas, <br>a tak máš viac priestoru predávať
+            .benefit
+              .mark
+              h3 Spokojnosť kupujúcich porastie úmerne s rýchlosťou tvojho webu
+      section.products#section-4
+        .productsContent
+          h1 Čo zahŕňa služba tvorby webov<br> od #[strong  Codebrothers?]
+          p Vyberte si niektorú z naších sluežieb a obratom Vám napíšeme, <br> aby sme sa o Vašom projekte dozvedeli viac.
+          .row.choose
+            .col-md-3
+              h3 Rýchly web na mieru
+              p Vytvoríme ti web založený na revolučnej technológii NodeJs a ReactJs. Už žiaden ťažkopádny Wordpress či Magenta. Prispôsobíme štruktúru a vizuál webu tvojim požiadavkám.
+              .chooseicon
+                img.svg.web(src="assets/images/icons/web.svg")
+            .col-md-3
+              h3 Komplexný servis
+              p Ponúkame ti riešenie ako zvýšiť predaje skvalitnením tvojich stránok. Nielenže tvoj web dostane nový šat s rýchlosťou blesku, zabezpečíme ti aj texty, ktoré sú čerešničkou predaja.
+              .chooseicon
+                img.svg.noweb(src="assets/images/icons/service.svg")
+            .col-md-3
+              h3 Úvodná konzultácia zdarma
+              p Vyplň a odošli kontaktný formulár, čím si zabezpečíš 1. konzultáciu úplne zadarmo. Vypracujeme ti možnosti vylepšenia aj cenovú ponuku grátis.
+              .chooseicon
+                img.svg.noweb(src="assets/images/icons/consultation.svg")
+          .consultation
+            button.readmore.btn.btn-primary(onclick="section(2)") Mám záujem o konzultáciu ZDARMA!
+      section.contact#section-5
+        .container
+          h2 Kontaktujte nás a získajte web s rýchlosťou svetla!
+          form
+            .form-group
+              label(for="name") Meno
+              input.form-control#name(type="name" placeholder="Vaše meno")
+            .form-group
+              label(for="surname") Priezvisko
+              input.form-control#surname(type="surname" placeholder="Vaše priezvisko")
+            .form-group
+              label(for="email") Email
+              input.form-control#email(type="email" placeholder="Váš email")
+            .form-group
+              label(for="message") Vaša správa
+              textarea.form-control#message(type="message" rows="5" placeholder="Priblížte nám Váš projekt a my Vám pomôžeme s jeho realizáciou.")
+            button.btn.btn-block(type="submit") Odoslať
+
+
+
+
 
 
             
