--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
 
     //Bootstrap CSS
     link(href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet")
     link(rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css")
     link(rel="stylesheet" href="./assets/css/codebrothers.css")
     
