--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -1,6 +1,9 @@
 $cbWhite: #fff;
 $cbBlack: #000;
 $cbLightBlue: #20d7be;
+$cbDarkPurple: #351348;
+$cbLightPurple: #9999ff;
+$cbDarkerPurple: #44165b;
 
 @mixin p($place, $n) {
   $m: ($n * 0.5);
@@ -33,7 +36,6 @@ $cbLightBlue: #20d7be;
 
 * {
   font-family: 'Montserrat', sans-serif;
-  background-color: $cbWhite;
 }
 
 body {
@@ -80,19 +82,6 @@ body {
           &:last-child {
             margin-right: 0;
           }
-          &.btn-outline {
-            border: 2px solid $cbLightBlue;
-            border-radius: 0.3rem;
-            padding: .5rem .75rem;
-
-            &:hover {
-              background-color: $cbLightBlue;
-              
-              a {
-                color: $cbWhite;
-              }
-            }
-          }
           a {
             color: $cbBlack;
             padding: .5rem;
@@ -107,37 +96,136 @@ body {
       }
     }
   }
-
   section {
-    height: 100vh;
+    height: calc(90vh - 95px);
 
-    #our-work {
-      .typingText {
-        display: none;
+    .q-list {
+      top: 50%;
+      left: 55%;
+      transform: translate(-50%, -50%);
+      padding: 0;
+      margin: 0;
+      white-space: nowrap;
+
+      li {
+        position: relative;
+        margin-bottom: .75rem;
+        list-style-type: none;
+        vertical-align: middle;
+
+        &:before {
+          content: "";
+          position: absolute;
+          top: 12px;
+          left: -32px;
+          width: 24px;
+          height: 24px;
+          mask: url("../images/icons/ic_help_black_24px.svg");
+          -webkit-mask: url("../images/icons/ic_help_black_24px.svg");
+          background-color: $cbDarkPurple;
+        }
+      }
+      &.success {
+        li {
+          &:before {
+            mask: url("../images/icons/ic_offline_pin_black_24px.svg");
+            -webkit-mask: url("../images/icons/ic_offline_pin_black_24px.svg");
+            background-color: $cbLightBlue;
+          }
+        }
+      }
+    }
+    &#our-work {
+      .fancy-text {
+        top: 50%;
+        transform: translateY(-50%);
+        
+        .typingText {
+          display: none;
+        
+          &.active {
+            display: block;
       
-        &.active {
-          display: block;
-    
-          h3 {
-            position: relative;
-            white-space: nowrap;
-            width: 45%;
-            overflow: hidden;
-    
-            &:nth-child(1) {
-              animation: typing 8s steps(30, end);
-              animation-fill-mode: both;
-            }
-            &:nth-child(2) {
-              animation: typing2 8s steps(30, end);
-              animation-fill-mode: both;
-            }
-            .typewriter {
-              color: $cbBlack !important;
-              animation: blink-caret .75s step-end infinite;
+            h3 {
+              position: relative;
+              white-space: nowrap;
+              width: 100%;
+              overflow: hidden;
+      
+              &:nth-child(1) {
+                animation: typing 8s steps(30, end);
+                animation-fill-mode: both;
+              }
+              &:nth-child(2) {
+                animation: typing2 8s steps(30, end);
+                animation-fill-mode: both;
+              }
+              .typewriter {
+                color: $cbBlack !important;
+                animation: blink-caret .75s step-end infinite;
+              }
             }
           }
         }
+      }
+      .phone {
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1;
+
+        img {
+          width: 100%;
+        }
+      }
+      .shape.circle {
+        top: 50%;
+        left: 50%;
+        width: calc((100vw * 0.5) * 0.75);
+        height: calc((100vw * 0.5) * 0.75);
+        border-radius: 50%;
+        background: linear-gradient(125deg, $cbLightBlue, $cbDarkPurple); // #68d8cc, #351348
+        transform: translateY(-50%);
+      }
+    }
+    &#services {
+      .pc {
+        top: 50%;
+        left: 0;
+        width: 100%;
+        transform: translateY(-50%);
+        z-index: 1;
+
+        img {
+          width: 110%;
+        }
+      }
+      .shape-block {
+        top: 0;
+        left: -75%;
+        width: 150%;
+        height: 100%;
+        background: linear-gradient(215deg, $cbLightBlue, $cbDarkPurple);
+      }
+    }
+    &#ref {
+      .phone-2 {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+
+        img {
+          width: 100%;
+        }
+      }
+      .shape-triangle {
+        top: 0;
+        height: 0;
+        width: 0;
+        border-left: calc((100vw * 0.25) * 0.97) solid transparent;
+        border-right: calc((100vw * 0.25) * 0.97) solid transparent;
+        border-bottom: 100px solid transparent;
+        border-top: calc(90vh - 95px) solid $cbLightPurple;
       }
     }
   }
@@ -149,29 +237,58 @@ body {
 }
 @keyframes typing {
   0% { width: 0% }
-  25% { width: 45% }
-  50% { width: 45% }
-  75% { width: 45% }
+  25% { width: 100% }
+  50% { width: 100% }
+  75% { width: 100% }
   100% { width: 0% }    
 }
 @keyframes typing2 {
   0% { width: 0% }
   25% { width: 0% }
-  50% { width: 45% }
-  55% { width: 45% }
+  50% { width: 100% }
+  55% { width: 100% }
   75% { width: 0% }
   100% { width: 0% }    
 }
 
+.btn-outline {
+  background-color: transparent;
+  border: 2px solid $cbLightBlue;
+  display: inline-block;
+  padding: .95rem .75rem!important;
+  font-weight: 600;
+  text-decoration: none;
+  color: $cbBlack;
+
+  &:hover {
+    background-color: $cbLightBlue;
+    color: $cbWhite!important;
+    text-decoration: none;
+  }
+}
+.card {
+  width: 32%;
+  border: 2px solid $cbLightPurple;
+  //-webkit-border-image: linear-gradient(45deg, $cbLightBlue, $cbDarkerPurple);
+}
 .position-relative {
   position: relative!important;
 }
 .position-absolute {
   position: absolute!important;
 }
+strong {
+  color: $cbLightBlue;
+}
+.text-center {
+  text-align: center;
+}
 
 .w-100 {
   width: 100%;
+}
+.w-75 {
+  width: 75%;
 }
 .h-100 {
   height: 100%;
