Working on website in progress.

--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -4,6 +4,10 @@ $cbLightBlue: #20d7be;
 $cbDarkPurple: #351348;
 $cbLightPurple: #9999ff;
 $cbDarkerPurple: #44165b;
+$cbSilver: #cccccc;
+
+$spaceamounts: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+$sides: (top, bottom, left, right);
 
 @mixin p($place, $n) {
   $m: ($n * 0.5);
@@ -65,11 +69,11 @@ body {
   overflow: hidden;
 
   header {
-    .logo {
-      img {
-        width: 115px;
-      }
-    }
+    background-color: rgba(255, 255, 255, 0.95);
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;
+    
     nav {
       ul {
         margin: 0;
@@ -97,14 +101,11 @@ body {
     }
   }
   section {
-    height: calc(90vh - 95px);
-
     .q-list {
-      top: 50%;
-      left: 55%;
-      transform: translate(-50%, -50%);
       padding: 0;
-      margin: 0;
+      margin: 0 auto;
+      display: block;
+      width: fit-content;
       white-space: nowrap;
 
       li {
@@ -136,10 +137,7 @@ body {
       }
     }
     &#our-work {
-      .fancy-text {
-        top: 50%;
-        transform: translateY(-50%);
-        
+      .fancy-text {        
         .typingText {
           display: none;
         
@@ -169,19 +167,17 @@ body {
         }
       }
       .phone {
-        top: 50%;
-        transform: translateY(-50%);
+        width: 75%;
         z-index: 1;
 
         img {
           width: 100%;
         }
       }
-      .shape.circle {
+      .shape-circle {
         top: 50%;
         left: 50%;
-        width: calc((100vw * 0.5) * 0.75);
-        height: calc((100vw * 0.5) * 0.75);
+        
         border-radius: 50%;
         background: linear-gradient(125deg, $cbLightBlue, $cbDarkPurple); // #68d8cc, #351348
         transform: translateY(-50%);
@@ -189,14 +185,12 @@ body {
     }
     &#services {
       .pc {
-        top: 50%;
         left: 0;
         width: 100%;
-        transform: translateY(-50%);
         z-index: 1;
 
         img {
-          width: 110%;
+          width: 100%;
         }
       }
       .shape-block {
@@ -209,9 +203,8 @@ body {
     }
     &#ref {
       .phone-2 {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        margin: 0 auto;
+        width: 40%;
         z-index: 1;
 
         img {
@@ -220,13 +213,20 @@ body {
       }
       .shape-triangle {
         top: 0;
-        height: 0;
-        width: 0;
-        border-left: calc((100vw * 0.25) * 0.97) solid transparent;
-        border-right: calc((100vw * 0.25) * 0.97) solid transparent;
-        border-bottom: 100px solid transparent;
-        border-top: calc(90vh - 95px) solid $cbLightPurple;
       }
+    }
+    .margin-block {
+      margin-top: 5rem!important;
+      margin-bottom: 5rem!important;
+    }
+  }
+  footer {
+    border-top: 1px solid $cbSilver;
+    font-size: .75rem;
+  }
+  .logo {
+    img {
+      width: 115px;
     }
   }
 }
@@ -251,6 +251,9 @@ body {
   100% { width: 0% }    
 }
 
+.bg-white {
+  background-color: $cbWhite;
+}
 .btn-outline {
   background-color: transparent;
   border: 2px solid $cbLightBlue;
@@ -266,24 +269,61 @@ body {
     text-decoration: none;
   }
 }
-.card {
-  width: 32%;
-  border: 2px solid $cbLightPurple;
-  //-webkit-border-image: linear-gradient(45deg, $cbLightBlue, $cbDarkerPurple);
+.cards {
+  display: flex;
+
+  .card {
+    border: 2px solid rgba(153, 153, 255, .35);
+    background-color: $cbWhite;
+    padding-bottom: 30px;
+    margin: 0 auto;
+    //-webkit-border-image: linear-gradient(45deg, $cbLightBlue, $cbDarkerPurple);
+    .icon {
+      bottom: -30px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background-color: $cbLightBlue;
+      color: $cbWhite;
+      font-size: 1.5rem;
+      z-index: 1;
+  
+      i {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
 }
-.position-relative {
-  position: relative!important;
+img {
+  opacity: 1;
+  transition: opacity .3s;
+}
+img[data-src]{
+  opacity: 0;
 }
 .position-absolute {
   position: absolute!important;
 }
-strong {
+.position-fixed {
+  position: fixed!important;
+}
+.position-relative {
+  position: relative!important;
+}
+strong, .strong {
   color: $cbLightBlue;
+  font-weight: 600;
 }
 .text-center {
   text-align: center;
 }
-
+.text-right {
+  text-align: right;
+}
 .w-100 {
   width: 100%;
 }
@@ -294,102 +334,189 @@ strong {
   height: 100%;
 }
 
+@each $space in $spaceamounts {
+  @each $side in $sides {
+    .m#{str-slice($side, 0, 1)}-#{$space} {
+      margin-#{$side}: #{$space * 0.5}rem!important;
+    }
+  
+    .p#{str-slice($side, 0, 1)}-#{$space} {
+      padding-#{$side}: #{$space * 0.5}rem!important;
+    }
+  }
+}
+
 .m-auto {
-  @include m("auto", 0);
+  margin: 0 auto!important;
 }
-.mt-0 {
-  @include m("t", 0);
+
+/* Custom, iPhone Retina */ 
+@media only screen and (min-width : 320px) {
+  #wrapper {
+    .desktop {
+      display: none;
+    }
+    .mobile {
+      nav {
+        display: none;
+      }
+    }
+    section {
+      &#our-work {
+        margin-top: 70px;
+  
+        .shape-circle {
+          width: 80vw;
+          height: 80vw;
+        }
+      }
+      &#ref {
+        .row {
+          flex-flow: column-reverse;
+        }
+        .shape-triangle {
+          width: 100%;
+          height: 100%;
+          border-top: 60vh solid $cbLightPurple;
+          border-left: calc(100vh * 0.27) solid transparent;
+          border-right: calc(100vh * 0.27) solid transparent;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+      }
+    }
+  }
+  .cards {
+    flex-direction: column;
+
+    .card {
+      width: 90%;
+    }
+  }
 }
-.mt-1 {
-  @include m("t", 1);
+
+@media only screen and (min-width: 320px) and (orientation: landscape) {
+  #wrapper {
+    section {
+      &#ref {
+        .phone-2 {
+          width: 25%;
+        }
+        .shape-triangle {
+          border-top: 90vh solid $cbLightPurple;
+          border-left: calc(100vh * 0.75) solid transparent;
+          border-right: calc(100vh * 0.75) solid transparent;
+        }
+      }
+    }
+  }
 }
-.mt-2 {
-  @include m("t", 2);
+
+@media only screen and (min-width: 460px) {
+  #wrapper {
+    section {
+      &#our-work {
+        .shape-circle {
+          width: calc(100vw * 0.6);
+          height: calc(100vw * 0.6);
+        }
+      }
+    }
+  }
 }
-.mt-3 {
-  @include m("t", 3);
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+  #wrapper {
+    .desktop {
+      display: flex;
+      width: 100%;
+    }
+    .mobile {
+      display: none;
+    }
+    section {
+      &#our-work {
+        margin-top: 105px;
+
+        .shape-circle {
+          width: calc(100vw * 0.4);
+          height: calc(100vw * 0.4);
+        }
+      }
+      &#ref {
+        .row {
+          flex-flow: row;
+        }
+        .shape-triangle {
+          width: 100%;
+          height: 100%;
+          border-top: 70vh solid $cbLightPurple;
+          border-left: calc(100vh * 0.5) solid transparent;
+          border-right: calc(100vh * 0.5) solid transparent;
+          left: 50%;
+          transform: translateX(-25%);
+        }
+      }
+    }
+  }
+  .cards {
+    flex-direction: row;
+
+    .card {
+      width: 30%;
+    }
+  }
 }
-.mr-0 {
-  @include m("r", 0);
+
+/* Medium devices*/
+@media only screen and (min-width : 1024px) {
+  #wrapper {
+    section {
+      &#our-work {
+        .shape-circle {
+          width: calc(100vw * 0.4);
+          height: calc(100vw * 0.4);
+        }
+      }
+      &#ref {
+        .phone-2 {
+          width: 40%;
+        }
+        .shape-triangle {
+          border-top: 60vh solid $cbLightPurple;
+          border-left: calc(100vh * 0.5) solid transparent;
+          border-right: calc(100vh * 0.5) solid transparent;
+        }
+      }
+    }
+  }
 }
-.mr-1 {
-  @include m("r", 1);
+
+/* Large devices*/
+@media only screen and (min-width : 1175px) {
+  #wrapper {
+    section {
+      &#our-work {
+        .shape-circle {
+          width: calc(100vw * 0.35);
+          height: calc(100vw * 0.35);
+        }
+      }
+    }
+  }
 }
-.mr-2 {
-  @include m("r", 2);
-}
-.mr-3 {
-  @include m("r", 3);
-}
-.mb-0 {
-  @include m("b", 0);
-}
-.mb-1 {
-  @include m("b", 1);
-}
-.mb-2 {
-  @include m("b", 2);
-}
-.mb-3 {
-  @include m("b", 3);
-}
-.mb-0 {
-  @include m("b", 0);
-}
-.mb-1 {
-  @include m("b", 1);
-}
-.mb-2 {
-  @include m("b", 2);
-}
-.mb-3 {
-  @include m("b", 3);
-}
-.pt-0 {
-  @include p("t", 0);
-}
-.pt-1 {
-  @include p("t", 1);
-}
-.pt-2 {
-  @include p("t", 2);
-}
-.pt-3 {
-  @include p("t", 3);
-}
-.pr-0 {
-  @include p("r", 0);
-}
-.pr-1 {
-  @include p("r", 1);
-}
-.pr-2 {
-  @include p("r", 2);
-}
-.pr-3 {
-  @include p("r", 3);
-}
-.pb-0 {
-  @include p("b", 0);
-}
-.pb-1 {
-  @include p("b", 1);
-}
-.pb-2 {
-  @include p("b", 2);
-}
-.pb-3 {
-  @include p("b", 3);
-}
-.pl-0 {
-  @include p("l", 0);
-}
-.pl-1 {
-  @include p("l", 1);
-}
-.pl-2 {
-  @include p("l", 2);
-}
-.pl-3 {
-  @include p("l", 3);
+
+/* Large devices*/
+@media only screen and (min-width : 1500px) {
+  #wrapper {
+    section {
+      &#our-work {
+        .shape-circle {
+          width: calc(100vw * 0.25);
+          height: calc(100vw * 0.25);
+        }
+      }
+    }
+  }
 }
