--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -1,7 +1,11 @@
 $cbWhite: #fff;
+$cbAngular: #dd0031;
 $cbBlack: #000;
+$cbBolt: #fed501;
+$cbNode: #43853d;
 $cbLightBlue: #20d7be;
 $cbDarkPurple: #351348;
+$cbReact: #61dafb;
 $cbLightPurple: #9999ff;
 $cbDarkerPurple: #44165b;
 $cbSilver: #cccccc;
@@ -101,6 +105,8 @@ body {
     }
   }
   section {
+    margin-bottom: 1.5rem;
+
     .q-list {
       padding: 0;
       margin: 0 auto;
@@ -136,7 +142,7 @@ body {
         }
       }
     }
-    &#our-work {
+    &#home {
       .fancy-text {        
         .typingText {
           display: none;
@@ -166,6 +172,15 @@ body {
           }
         }
       }
+      .pc {
+        left: 0;
+        width: 100%;
+        z-index: 1;
+
+        img {
+          width: 100%;
+        }
+      }
       .phone {
         width: 75%;
         z-index: 1;
@@ -173,6 +188,22 @@ body {
         img {
           width: 100%;
         }
+      }
+      .phone-2 {
+        margin: 0 auto;
+        width: 40%;
+        z-index: 1;
+
+        img {
+          width: 100%;
+        }
+      }
+      .shape-block {
+        top: 0;
+        left: -75%;
+        width: 150%;
+        height: 100%;
+        background: linear-gradient(215deg, $cbLightBlue, $cbDarkPurple);
       }
       .shape-circle {
         top: 50%;
@@ -182,8 +213,11 @@ body {
         background: linear-gradient(125deg, $cbLightBlue, $cbDarkPurple); // #68d8cc, #351348
         transform: translateY(-50%);
       }
+      .shape-triangle {
+        top: 0;
+      }
     }
-    &#services {
+    /*&#production {
       .pc {
         left: 0;
         width: 100%;
@@ -200,8 +234,8 @@ body {
         height: 100%;
         background: linear-gradient(215deg, $cbLightBlue, $cbDarkPurple);
       }
-    }
-    &#ref {
+    }*/
+    /*&#ref {
       .phone-2 {
         margin: 0 auto;
         width: 40%;
@@ -213,6 +247,24 @@ body {
       }
       .shape-triangle {
         top: 0;
+      }
+    }*/
+    &#contact {
+      #contact-form {
+        .form-row {
+          display: inline-block;
+          width: 100%;
+          margin-bottom: .5rem;
+
+          label, input, textarea {
+            width: 100%;
+          }
+          input, textarea {
+            border: 1px solid $cbLightPurple;
+            background-color: $cbWhite;
+            padding: .5rem .75rem;
+          }
+        }
       }
     }
     .margin-block {
@@ -251,9 +303,7 @@ body {
   100% { width: 0% }    
 }
 
-.bg-white {
-  background-color: $cbWhite;
-}
+.bg-white { background-color: $cbWhite; }
 .btn-outline {
   background-color: transparent;
   border: 2px solid $cbLightBlue;
@@ -277,7 +327,7 @@ body {
     background-color: $cbWhite;
     padding-bottom: 30px;
     margin: 0 auto;
-    //-webkit-border-image: linear-gradient(45deg, $cbLightBlue, $cbDarkerPurple);
+
     .icon {
       bottom: -30px;
       left: 50%;
@@ -298,41 +348,17 @@ body {
     }
   }
 }
-img {
-  opacity: 1;
-  transition: opacity .3s;
-}
-img[data-src]{
-  opacity: 0;
-}
-.position-absolute {
-  position: absolute!important;
-}
-.position-fixed {
-  position: fixed!important;
-}
-.position-relative {
-  position: relative!important;
-}
-strong, .strong {
-  color: $cbLightBlue;
-  font-weight: 600;
-}
-.text-center {
-  text-align: center;
-}
-.text-right {
-  text-align: right;
-}
-.w-100 {
-  width: 100%;
-}
-.w-75 {
-  width: 75%;
-}
-.h-100 {
-  height: 100%;
-}
+img { opacity: 1; transition: opacity .3s; }
+img[data-src]{ opacity: 0; }
+.position-absolute { position: absolute!important; }
+.position-fixed { position: fixed!important; }
+.position-relative { position: relative!important; }
+strong, .strong { color: $cbLightBlue; font-weight: 600; }
+.text-center { text-align: center; }
+.text-right { text-align: right; }
+.w-100 { width: 100%; }
+.w-75 { width: 75%; }
+.h-100 { height: 100%; }
 
 @each $space in $spaceamounts {
   @each $side in $sides {
@@ -346,9 +372,12 @@ strong, .strong {
   }
 }
 
-.m-auto {
-  margin: 0 auto!important;
-}
+.m-auto { margin: 0 auto!important; }
+
+.text-color-angular { color: $cbAngular; }
+.text-color-react { color: $cbReact; }
+.text-color-node { color: $cbNode; }
+.text-color-bolt { color: $cbBolt; }
 
 /* Custom, iPhone Retina */ 
 @media only screen and (min-width : 320px) {
@@ -362,17 +391,17 @@ strong, .strong {
       }
     }
     section {
-      &#our-work {
+      &#home {
         margin-top: 70px;
   
         .shape-circle {
           width: 80vw;
           height: 80vw;
         }
-      }
-      &#ref {
         .row {
-          flex-flow: column-reverse;
+          &:last-child {
+            flex-flow: column-reverse;
+          }
         }
         .shape-triangle {
           width: 100%;
@@ -384,13 +413,16 @@ strong, .strong {
           transform: translateX(-50%);
         }
       }
+      /*&#ref {
+        
+      }*/
     }
   }
   .cards {
     flex-direction: column;
 
     .card {
-      width: 90%;
+      width: 100%;
     }
   }
 }
@@ -398,7 +430,7 @@ strong, .strong {
 @media only screen and (min-width: 320px) and (orientation: landscape) {
   #wrapper {
     section {
-      &#ref {
+      &#home {
         .phone-2 {
           width: 25%;
         }
@@ -415,7 +447,7 @@ strong, .strong {
 @media only screen and (min-width: 460px) {
   #wrapper {
     section {
-      &#our-work {
+      &#home {
         .shape-circle {
           width: calc(100vw * 0.6);
           height: calc(100vw * 0.6);
@@ -436,17 +468,17 @@ strong, .strong {
       display: none;
     }
     section {
-      &#our-work {
+      &#home {
         margin-top: 105px;
 
         .shape-circle {
           width: calc(100vw * 0.4);
           height: calc(100vw * 0.4);
         }
-      }
-      &#ref {
         .row {
-          flex-flow: row;
+          &:last-child {
+            flex-flow: row;
+          }
         }
         .shape-triangle {
           width: 100%;
@@ -458,13 +490,23 @@ strong, .strong {
           transform: translateX(-25%);
         }
       }
+      /*&#ref {
+        
+      }*/
     }
   }
   .cards {
     flex-direction: row;
 
     .card {
-      width: 30%;
+      width: 32%;
+
+      &:first-child {
+        margin-left: 0;
+      }
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 }
@@ -473,13 +515,11 @@ strong, .strong {
 @media only screen and (min-width : 1024px) {
   #wrapper {
     section {
-      &#our-work {
+      &#home {
         .shape-circle {
           width: calc(100vw * 0.4);
           height: calc(100vw * 0.4);
         }
-      }
-      &#ref {
         .phone-2 {
           width: 40%;
         }
@@ -489,6 +529,9 @@ strong, .strong {
           border-right: calc(100vh * 0.5) solid transparent;
         }
       }
+      /*&#ref {
+        
+      }*/
     }
   }
 }
@@ -497,7 +540,7 @@ strong, .strong {
 @media only screen and (min-width : 1175px) {
   #wrapper {
     section {
-      &#our-work {
+      &#home {
         .shape-circle {
           width: calc(100vw * 0.35);
           height: calc(100vw * 0.35);
@@ -511,7 +554,7 @@ strong, .strong {
 @media only screen and (min-width : 1500px) {
   #wrapper {
     section {
-      &#our-work {
+      &#home {
         .shape-circle {
           width: calc(100vw * 0.25);
           height: calc(100vw * 0.25);
