Add text typing interval handler for stopping and starting interval based on viewvport content visibility, to prevent speed issues.

--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -170,6 +170,8 @@ body {
         }
       }
       .pc {
+        min-width: 330px;
+        min-height: 195px;
         left: 0;
         width: 100%;
         z-index: 1;
