--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -249,6 +249,12 @@ body {
   footer {
     border-top: 1px solid $cbSilver;
     font-size: .75rem;
+
+    p {
+      a {
+        color: $cbBlack;
+      }
+    }
   }
   .logo {
     img {
