--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -157,7 +157,7 @@ body {
           &.active {
             display: block;
       
-            h3 {
+            p {
               position: relative;
               white-space: nowrap;
               width: 100%;
@@ -394,10 +394,15 @@ body {
     background-color: $cbDarkerBlue;
   }
 }
+// MODAL
 .modal {
   position: fixed;
   width: 100%;
   height: 100%;
+  // top: 0;
+  &.show {
+    top: 0;
+  }
 
   .modal-bg {
     width: 100%;
@@ -571,7 +576,7 @@ strong, .strong { color: $cbLightBlue; font-weight: 600; }
           transform: translateX(-50%);
         }
         .typingText {
-          h3 { font-size: 1rem; }
+          p { font-size: 1rem; }
         }
       }
       &#ref {
@@ -708,7 +713,7 @@ strong, .strong { color: $cbLightBlue; font-weight: 600; }
           transform: translateX(-25%);
         }
         .typingText {
-          h3 { font-size: 1.17rem; }
+          p { font-size: 1.17rem; }
         }
       }
       &#ref {
